# inventory-pricing

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/: ISSUE_remove_strict_false_3_0_0.md
.github/workflows/: ci.yml  release.yml
docs/rfcs/: 021-delete-on-zero.md  README.md
inventory/: __init__.py  models.py  pricing.py  reports.py
tests/: test_models.py  test_models_properties.py  test_package.py  test_pricing.py  test_pricing_properties.py  test_reports.py  test_reports_properties.py  test_warehouse_delete_on_zero.py
