[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
# Distribution name on PyPI. The import package is still `inventory`
# (see `[tool.setuptools.packages.find].include` below); only the
# on-PyPI name changed — `inventory` was already taken by an
# unrelated project, so we publish under `inventory-pricing` and
# users do `pip install inventory-pricing` / `import inventory`.
name = "inventory-pricing"
version = "0.1.0"
# NOTE: `requires-python` is the pyproject.toml equivalent of setup.py's
# `python_requires=">=3.10"`. setuptools propagates it to the built
# distributions' `Requires-Python` metadata, so `pip install` on older
# Pythons is refused automatically.
requires-python = ">=3.10"
readme = "README.md"
license = "Apache-2.0"
license-files = ["LICENSE"]
classifiers = [
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries",
]
# NOTE: no legacy "License :: ..." classifier here.
# PEP 639 / current setuptools reject legacy License classifiers when a
# SPDX `license = "..."` expression is set above, and the SPDX form is
# the authoritative source for PyPI going forward.

[project.urls]
Homepage = "https://github.com/dingxianzhong/inventory-pricing"
Repository = "https://github.com/dingxianzhong/inventory-pricing"
Changelog = "https://github.com/dingxianzhong/inventory-pricing/blob/main/CHANGELOG.md"
Issues = "https://github.com/dingxianzhong/inventory-pricing/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["inventory*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
